[package]
name = "rusty_robot_world"
version = "0.1.0"
authors = ["pindell-matt <pindell.m@protonmail.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
diesel = { version = "0.15.2", features = ["postgres"] }
diesel_codegen = { version = "0.15.0", features = ["postgres"] }
dotenv = "0.9.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
r2d2 = "0.7"
r2d2-diesel = "0.15"

[patch.crates-io]
diesel = { git = "https://github.com/diesel-rs/diesel.git" }
diesel_infer_schema = { git = "https://github.com/diesel-rs/diesel.git" }
# diesel_codegen = { git = "https://github.com/diesel-rs/diesel.git" }